[gd_scene load_steps=6 format=3 uid="uid://wt7hb57ic7hh"]

[ext_resource type="Script" path="res://Menu.gd" id="1_lod11"]
[ext_resource type="PackedScene" uid="uid://d2urdcqtr7xsi" path="res://music_global.tscn" id="1_mll6q"]
[ext_resource type="PackedScene" uid="uid://dd24y1jcounp7" path="res://Scenes/coinDisplay.tscn" id="2_fv3ji"]
[ext_resource type="PackedScene" uid="uid://fldhyw8rvrv2" path="res://incomeDisplay.tscn" id="3_h2t5q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1qoob"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="AudioStreamPlayer" parent="." instance=ExtResource("1_mll6q")]

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lod11")

[node name="Displays" type="Node2D" parent="Menu"]

[node name="CoinDisplay" parent="Menu/Displays" instance=ExtResource("2_fv3ji")]
offset_left = 52.0
offset_top = 56.0
offset_right = 53.0
offset_bottom = 96.0
scale = Vector2(0.08, 0.08)

[node name="IncomeDisplay" parent="Menu/Displays" instance=ExtResource("3_h2t5q")]
offset_left = 517.0
offset_top = 56.0
offset_right = 518.0
offset_bottom = 96.0
scale = Vector2(0.08, 0.08)

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 350
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 62
text = "PLINKO EMPIRE!!"

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2

[node name="StartBtn" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_1qoob")
text = "Start"

[node name="Shop" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_1qoob")
text = "Shop"

[node name="OptionsBtn" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_1qoob")
text = "Options"

[node name="QuitBtn" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_1qoob")
text = "Quit?"

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/StartBtn" to="Menu" method="_on_start_btn_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Shop" to="Menu" method="_on_shop_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/OptionsBtn" to="Menu" method="_on_options_btn_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/QuitBtn" to="Menu" method="_on_quit_btn_pressed"]
